# crypto-primitives

./: .all-contributorsrc  CONTRIBUTING.md  Cargo.toml  README.md
algebra/: Cargo.toml
algebra/src/: field.rs  from_ref.rs  lib.rs  mul_by_scalar.rs
algebra/src/field/: ark_ff_field.rs  crypto_bigint_boxed_monty.rs  crypto_bigint_const_monty.rs  crypto_bigint_monty.rs  projectable_to_field.rs
algebra/src/ring/: crypto_bigint_int.rs
benches/: boxed_monty_field_benches.rs  const_field_benches.rs  const_monty_field_benches.rs  field_ops_bench_common.rs  monty_field_benches.rs
poly/: Cargo.toml
poly/src/: dense.rs  lib.rs  mle.rs  utils.rs  zero_degree.rs
poly/src/mle/: dense.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/: field.rs  helpers.rs  lib.rs  matrix.rs  ring.rs  semiring.rs
src/field/: ark_ff_field.rs  ark_ff_fp.rs  crypto_bigint_boxed_monty.rs  crypto_bigint_const_monty.rs  crypto_bigint_helpers.rs  crypto_bigint_monty.rs  f2.rs
src/helpers/: crypto_bigint.rs
src/ring/: crypto_bigint_int.rs
src/semiring/: ark_ff_bigint.rs  boolean.rs  crypto_bigint_boxed_uint.rs  crypto_bigint_uint.rs
