[workspace]
members = ["algebra", "poly", "proc-macros"]
resolver = "3"
default-members = ["algebra", "poly", "proc-macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/crypto-primitives"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
ark-ff = { version = "0.5", default-features = false}
ark-serialize = { version = "0.5", defaul6t-features = false}
ark-std = { version = "0.5", default-features = false }

# Wrapped crates
crypto-bigint = { version = "0.7.0-rc.10", default-features = false}

crypto-primitives-algebra = { path = "algebra" }
crypto-primitives-proc-macros = { path = "proc-macros" }
num-traits = { version = "0.2", default-features = false }
pastey = "0"
proptest = { version = "1", default-features = false, features = ["alloc"] }
rand = { version = "0.10.0-rc.1", default-features = false }
rand_core = { version = "0.9", default-features = false }
rayon = { version = "1.10" }
serde = { version = "1", default-features = false }
thiserror = { version = "2.0.17" }
zeroize = { version = "1", default-features = false }

[workspace.lints.rust]
missing_docs = "allow" # FIXME
unsafe_code = "allow" # We do use unsafe code for performance reasons

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"


