[package]
name = "crypto-primitives-poly"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]

std = ["crypto-primitives-algebra/std", "ark-std/std"]
parallel = ["dep:rayon"]
rand = ["dep:rand", "crypto-primitives-algebra/rand"]

[dependencies]

# Core
ark-std = { workspace = true, default-features = false }
# Internal
crypto-primitives-algebra = { workspace = true, features = ["crypto_bigint"] }
crypto-primitives-proc-macros = { workspace = true }
displaydoc = "0.2"
itertools = { version = "0.14", default-features = false }
num-traits = { workspace = true }
pastey = { workspace = true }
rand = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
crypto-bigint = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }

[lints]
workspace = true
